fixed border to align with rest of page
No issues

--- a/src/App.css
+++ b/src/App.css
@@ -357,8 +357,8 @@
 /*PROJECTS for desktop design*/
 @media screen and (max-width: 812px){
   #fullCard{
-    margin-right: -20px;
-    margin-left: -20px;
+    margin-right: -23px;
+    margin-left: -23px;
   }
 
   #projectName {
